added response to week #1

--- a/index.html
+++ b/index.html
@@ -1,10 +1,112 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>CART451 Readings Responses</title>
-</head>
-<body>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="text_wrapper">
+      <h1>CART451 Reading Response</h1>
+      <p>All reading responses for CART451 class.</p>
 
-</body>
+      <h2>Week #1 -> Short Bio</h2>
+      <p>
+        This activity of presenting ourselves reminds me of my early days in
+        elementary school. the teacher would always ask us to give some
+        information about ourselves in some sort of activity. Sometimes, we
+        would get handed out questionnaires with little boxes that needed to be
+        filled out, make drawings our houses, family, friends, or of us. But, my
+        favorite one was making acronyms with my name. I would write down my
+        name vertically and write a word that is representative of me at each
+        letter. I have done these dozens of times, but I wanted to do it again
+        for this bio, but with a twist. So, I have asked ChatGPT to create the
+        acronym with words that he thinks represent me, both negative and
+        positive, based on our previous conversations. Let's see what came out
+        and if it is True:
+      </p>
+      <ul>
+        <li>
+          <b>A</b>dventurous: I am adventurous, I love hiking, biking and
+          travel, always down for an adventure.
+        </li>
+        <li>
+          <b>R</b>esourceful: I am resourceful as well, I usually don't like
+          asking for help unless I am really stuck, I think it is really
+          beneficial to find what you need to know yourself.
+        </li>
+        <li>
+          <b>N</b>uturing: I think this is also true, but not as much as the
+          last two. I am not the most nuturing friend, this is something I could
+          work on.
+        </li>
+        <li>
+          <b>A</b>nalytical: I think this is also accurate. I really like
+          analyzing results, looking deep into subjects, and I am good at
+          discerning certain things from situations.
+        </li>
+        <li>
+          <b>U</b>nderstanding: Very accurate as well. I think I am very
+          understanding and tend to not see things that happen to me as
+          personal. I am rarely frustrated when friends cancel on me and also
+          understanding in profesional environments.
+        </li>
+        <li>
+          <b>D</b>etermined: Not as much as I would like. There are a lot of
+          things I am not willing to sacrifice to accomplish my goals such as
+          time off, comfort, alone time and many others. I still work hard but
+          not as much as other people.
+        </li>
+        <li>----</li>
+        <li>
+          <b>J</b>oyful: That is very much true. I am often being called a
+          "golden retriever" since I'm always making jokes and trying to lighten
+          the mood.
+        </li>
+        <li>
+          <b>A</b>daptable: Yes, I feel like this is similar to "understanding".
+          I can easily adapt to different environment and situations. I will not
+          necessarily fit right in everywhere but will always be able to adapt
+          myself to get along.
+        </li>
+        <li>
+          <b>B</b>enevolent: That is true as well. I really like taking some
+          time to help out other people, but I do have my limits as well. I am
+          very self-reliant, so I do expect people to be too. I don't mind
+          giving some time to help out, but I don't like when people dump their
+          responsibilities on me.
+        </li>
+        <li>
+          <b>L</b>oyal: This is something that is very important to me.
+          Respecting engagements and being loyal to your words is something that
+          I always do and that I admire in other people. Trust in your friends,
+          partners and colleagues is something that is hard to achieve but when
+          done right gives you the opportunity accomplish a lot.
+        </li>
+        <li>
+          <b>E</b>nergetic: Also true. This goes back to my golden retriever
+          attitude. I always have energy and always willing to do something.
+          But, I feel like I have lost some of my drive and the last 2 years.
+          Maybe I'm getting older, or my priorities are changing, I don't
+          know...
+        </li>
+        <li>
+          <b>R</b>espectful: This is also a priority for me. Respecting yourself
+          and others is the key to establishing healthy relationships with
+          others.
+        </li>
+        <li>
+          <b>T</b>rusthworthy: Very similar to loyalty, it is important that my
+          act on what I say. I expect the same from others, so I act the way I
+          wish other would act with me.
+        </li>
+      </ul>
+      <p>
+        All in all, I feel like ChatGPT did a good job(which does not happen
+        often). He did forget to put the "b" in "Jalbert" three times even when
+        I told him. The answers he gave me are also pretty generic, but it did give
+        me a playground to talk about myself.
+      </p>
+    </div>
+  </body>
 </html>
