--- a/index.html
+++ b/index.html
@@ -104,8 +104,32 @@
       <p>
         All in all, I feel like ChatGPT did a good job(which does not happen
         often). He did forget to put the "b" in "Jalbert" three times even when
-        I told him. The answers he gave me are also pretty generic, but it did give
-        me a playground to talk about myself.
+        I told him. The answers he gave me are also pretty generic, but it did
+        give me a playground to talk about myself.
+      </p>
+      <h2>Week #3 -> Crowd-sourcing</h2>
+      <p>
+        I decided to explore "Exhausting a Crowd". I think the concept is very
+        interesting. I believe that this is a way to criticise "turking". It is
+        very clear that only humans(or a very good AI) would be able to
+        accurately describe what is happening in the footage. And even then, the
+        footage quality is pretty low and some actions are very hard to see.
+        People try to note what is happening, but we quickly see that what we
+        see can be very different for me and for other viewers. We each have our
+        own perception on what is going on, what we think the people in the
+        footage are feeling, doing, going to. I think this shows how biased our
+        view on such a simple thing like camera footage is. The things we notice
+        and the "data" we create is biased and the problem would be to assume
+        that this data is reality and true. Now, imagining that this kind of
+        footage could be analyzed by artificial intelligence that can make
+        errors and that is trained on data that is biased as well, it is even
+        more dangerous to take this as the truth. Knowing this, it would make
+        sense to not use the conclusion of the analysis of camera footage to
+        make decision, but unfortunately, information like that is used by
+        governments and law enforcement. Using tools like this can be useful and
+        good if used in the right way. But, we always need to keep in mind that
+        the technology we use is always biased and that we need to keep this in
+        mind when using it.
       </p>
     </div>
   </body>
