--- a/exercise_one/public/index.html
+++ b/exercise_one/public/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css" />
     <title>F1 Drivers Data</title>
     <style>
       html,
       body {
         padding: 0;
         margin: 0;
-        width:  100%;
+        width: 100%;
         height: 100%;
         overflow: hidden;
         background-color: #1b1b1b;
