--- a/index.html
+++ b/index.html
@@ -131,6 +131,29 @@
         the technology we use is always biased and that we need to keep this in
         mind when using it.
       </p>
+      <h2>Week #4 -> AI</h2>
+      <p>
+        I think AI is a phenomenal technology. It will allow us to automate a
+        lot of tedious tasks and leave use more time and resources to do what
+        actually matters. In the age of data, we have so much information to
+        feed the models and this makes AI is more pertinent than ever. But I
+        still think we need to be careful. As practical and useful as they are,
+        they are also extremely powerful. I liked Allisons's view on poetry bot,
+        saying that they should not try to mimic humans' poetry. There is this
+        sort of obsession with re-creating AI in a human form, with a human mind
+        or giving it human tasks. Yes, it may be based on how our brain works,
+        but I believe it should stay an inspiration of the architecture and not
+        a copy. I don't think AI should live amongst us, we should control and
+        own AI. By owning I mean that we should stay in control of it, not let
+        AI guide us and make decisions for us. Artistically, I think AI can be a
+        great tool and source of inspiration. It can help us build our vision or
+        feed us information to help us in our practice. But, AI can be unhealthy
+        if it starts making the decisions for us and making the creative steps,
+        locking us in a spiral of things that have already been done. When
+        making art with the AI, we need to be aware of how that AI was created,
+        which data is affecting its decisions and outputs and being aware of its
+        bias.
+      </p>
     </div>
   </body>
 </html>
